--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<div id="gameContainer" class="main">
 		
 		<header id="gameHeader" class="container">
-			<h1 id="gameTItle">WordScramble</h1>
+			<h1 id="gameTitle">WordScramble</h1>
 			<a href="index.html" title="start a new game" id="newGame">New Game</a>
 		</header>
 		
