--- a/src/index.html
+++ b/src/index.html
@@ -4,36 +4,36 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble</title>
-	
+
 	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
-	
+
 </head>
 <body ontouchstart="">
 
 	<div id="gameContainer" class="main">
-		
+
 		<header id="gameHeader" class="container">
 			<h1 id="gameTitle">WordScramble</h1>
 			<a href="index.html" title="start a new game" id="newGame">New Game</a>
 		</header>
-		
+
 		<div id="maskedWords" class="container"></div>
-		
+
 		<div id="turnActions" class="container">
 			<span id="wordAttempt"></span>
 			<a href="#" id="clearWordAttempt">clear</a>
 		</div>
-		
+
 		<div id="letterContainer" class="container">
 			<div id="letterList" class="container"></div>
 		</div>
-		
+
 		<div id="turnSubmit" class="container">
 			<input type="button" id="submitWord" value="Submit Word" />
 		</div>
-		
+
 	</div>
-	
+
 	<div id="previousWordsWrapper"></div>
 
 	<script src="js/dictionaryService.js" type="text/javascript"></script>
@@ -42,23 +42,22 @@
 	<script src="js/gameService.js" type="text/javascript"></script>
 	<script src="config.js" type="text/javascript"></script>
 	<script type="text/javascript">
-	
+
 		'use strict';
-		
+
 		var activeConfiguration = wordScramble.configuration;
-		
+
 		var dService = new wordScramble.dictionaryService(activeConfiguration.dictionaryUrl);
 		//dService.removeCache();
-		
-		var lService = new wordScramble.letterService();
-		var gService = new wordScramble.gameService(dService, lService, activeConfiguration);
+
+		var gService = new wordScramble.gameService(dService, activeConfiguration);
 		//gService.removeCache();
-		
+
 		var uiService = new wordScramble.uiService(document.querySelector("#gameContainer"), gService);
-		
+
 		gService.startGame();
-		
-		
+
+
 	</script>
-</body>	
+</body>
 </html>
