--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 
 	<div id="previousWordsWrapper"></div>
 
+	<script src="js/pubsub.js" type="text/javascript"></script>
 	<script src="js/dictionaryService.js" type="text/javascript"></script>
 	<script src="js/letterService.js" type="text/javascript"></script>
 	<script src="js/uiService.js" type="text/javascript"></script>
@@ -56,7 +57,6 @@
 		var uiService = new wordScramble.uiService(document.querySelector("#gameContainer"), gService);
 
 		gService.startGame();
-
 
 	</script>
 </body>
