--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE HTML>
-<html lang="en" manifest="wordScramble.appcache">
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
+
+	<!-- test only: no caching -->
+	<meta http-equiv="cache-control" content="max-age=0" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="expires" content="0" />
+	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+	<meta http-equiv="pragma" content="no-cache" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble</title>
 
 	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
-
+	<script src="js/wordFinder_worker.js" type="text/javascript"></script>
 </head>
 <body ontouchstart="">
 
@@ -56,8 +64,15 @@
 
 		var activeConfiguration = wordScramble.configuration;
 
-		var dService = new wordScramble.dictionaryService(activeConfiguration.dictionaryUrl);
-		//dService.removeCache();
+		try
+		{
+			var dService = new wordScramble.dictionaryService();
+			//dService.removeCache();
+		}
+		catch(exception)
+		{
+			alert(exception);
+		}
 
 		var gService = new wordScramble.gameService(dService, activeConfiguration);
 		//gService.removeCache();
