Add swipeHandler to abstract some of the touch events. Modify previousWordsManager to use the swipeHandler.

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,8 @@
 	<script src="js/pubsub.js" type="text/javascript"></script>
 	<script src="js/letterService.js" type="text/javascript"></script>
 
+	<script src="js/swipeHandler.js" type="text/javascript"></script>
+
 	<script src="js/uiModules/newGameManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/submitWordManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/clearWordAttemptManager.js" type="text/javascript"></script>
