--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="utf-8" />
 
-	<!-- test only: no caching -->
+	<!-- test only: no caching --
 	<meta http-equiv="cache-control" content="max-age=0" />
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="expires" content="0" />
 	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 	<meta http-equiv="pragma" content="no-cache" />
+	<!-- # -->
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble</title>
@@ -17,6 +18,8 @@
 	<script src="js/wordFinder_worker.js" type="text/javascript"></script>
 </head>
 <body ontouchstart="">
+
+	<aside id="status"></aside>
 
 	<article id="gameContainer" class="main">
 
