--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
 	<title>WordScramble</title>
 
 	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
-	<script src="js/wordFinder_worker.js" type="text/javascript"></script>
 </head>
 <body ontouchstart="">
 
@@ -52,8 +51,7 @@
 	<aside id="previousWordsWrapper"></aside>
 
 	<script src="config.js" type="text/javascript"></script>
-	<script src="js/pubsub.js" type="text/javascript"></script>
-	<script src="js/letterService.js" type="text/javascript"></script>
+	<script src="js/lib/pubsubz.js" type="text/javascript"></script>
 
 	<script src="js/swipeHandler.js" type="text/javascript"></script>
 
@@ -64,9 +62,12 @@
 	<script src="js/uiModules/maskedWordsManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/previousWordsManager.js" type="text/javascript"></script>
 
+	<script src="js/dict/json_dict.js" type="text/javascript"></script>
+	<script src="js/gameBuilder/gameBuilder_letters.js" type="text/javascript"></script>
+	<script src="js/gameBuilder/gameBuilder.js" type="text/javascript"></script>
+
 	<script src="js/wordAttemptService.js" type="text/javascript"></script>
 	<script src="js/gameService.js" type="text/javascript"></script>
 	<script src="js/uiService.js" type="text/javascript"></script>
-	<script src="js/dictionaryService.js" type="text/javascript"></script>
 </body>
 </html>
