--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,14 @@
 
 	<aside id="previousWordsWrapper"></aside>
 
+	<script type="text/javascript">
+		//window.localStorage.removeItem("workScramble.dict");
+		//window.localStorage.removeItem("wordScramble.dict");
+		//window.localStorage.removeItem("wordScramble.gameData");
+		//window.localStorage.removeItem("wordScramblegameData");
+		//window.localStorage.removeItem("undefined");
+	</script>
+
 	<script src="config.js" type="text/javascript"></script>
 	<script src="js/lib/pubsubz.js" type="text/javascript"></script>
 
@@ -69,5 +77,6 @@
 	<script src="js/wordAttemptService.js" type="text/javascript"></script>
 	<script src="js/gameService.js" type="text/javascript"></script>
 	<script src="js/uiService.js" type="text/javascript"></script>
+
 </body>
 </html>
