Change path to stylesheet in prod.html

--- a/src/prod.html
+++ b/src/prod.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble</title>
 
-	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
+	<link rel="stylesheet" type="text/css" href="wordScramble.css" />
 </head>
 <body ontouchstart="">
 
