Update index/prod html files

--- a/src/prod.html
+++ b/src/prod.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
+	<meta http-equiv="cache-control" content="public, max-age=31536000" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble</title>
-
 	<link rel="stylesheet" type="text/css" href="wordScramble.css" />
 </head>
 <body ontouchstart="">
