--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble Development</title>
 
+	<link rel="stylesheet" type="text/css" href="style/drawer.css" />
 	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
+	<link rel="stylesheet" href="font/fontello/css/fontello.css" />
 </head>
 <body ontouchstart="">
 
 	<aside id="status"></aside>
 
+	<div id="menu" class="drawer" data-swipe-target="#gameContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle">
+		<header>
+			<h1>WordScramble Menu</h1>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="index.html" class="menuToggle" title="start a new game" id="newGame">New Game</a></li>
+			</ul>
+		</nav>
+	</div>	
+	
 	<article id="gameContainer" class="main">
 
 		<header id="gameHeader" class="container">
 			<hgroup>
+				<span class="icon-menu menuToggle" title="menu"></span>
 				<h1 id="gameTitle">WordScramble</h1>
 			</hgroup>
-			<nav>
-				<a href="index.html" title="start a new game" id="newGame">New Game</a>
-			</nav>
 		</header>
 
 		<section id="maskedWords" class="container"></section>
@@ -51,6 +62,7 @@
 
 	<script src="js/swipeHandler.js" type="text/javascript"></script>
 
+	<script src="js/uiModules/drawer.js" type="text/javascript"></script>
 	<script src="js/uiModules/newGameManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/submitWordManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/clearWordAttemptManager.js" type="text/javascript"></script>
