Add a "close" (cancel) icon to icon fonts, include the icon in the menu to close the menu drawer

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
 	<div id="menu" class="drawer" data-swipe-target="#gameContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle">
 		<header>
+			<span class="icon-cancel menuToggle" title="close menu"></span>
 			<h1>WordScramble Menu</h1>
 		</header>
 		<nav>
@@ -29,7 +30,7 @@
 
 		<header id="gameHeader" class="container">
 			<hgroup>
-				<span class="icon-menu menuToggle" title="menu"></span>
+				<span class="icon-menu menuToggle" title="open menu"></span>
 				<h1 id="gameTitle">WordScramble</h1>
 			</hgroup>
 		</header>
