--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
 	<aside id="menu" class="drawer" data-swipe-target="#gameContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle, .menuItem">
 		<header>
 			<span class="icon-cancel menuToggle toggle" title="close menu"></span>
-			<h1>WordScramble Menu</h1>
+			<h1>Menu</h1>
 		</header>
 		<nav>
 			<ul>
 				<li><a href="index.html" class="menuItem" title="start a new game" id="newGame">New Game</a></li>
-				<!-- <li><a href="index.html" class="menuItem gameSummaryToggle" title="view game summary" id="gameSummaryToggle">Game Summary</a></li> -->
+				<li><a href="index.html" class="menuItem gameSummaryToggle" title="view game summary" id="gameSummaryToggle">Game Summary</a></li>
 			</ul>
 		</nav>
 	</aside>
@@ -33,6 +33,7 @@
 			<h1>Game Summary</h1>
 		</header>
 		<div id="gameSummaryContents">
+			<h2>Current Game</h2>
 			<section id="currentGameSummaryContents"></section>
 			<h2>Previous Game</h2>
 			<section id="previousGameSummaryContents">No data available.</section>
@@ -81,6 +82,7 @@
 	<script src="js/uiModules/letterListManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/maskedWordsManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/previousWordsManager.js" type="text/javascript"></script>
+	<script src="js/uiModules/currentWordsManager.js" type="text/javascript"></script>
 
 	<script src="js/dict/json_dict.js" type="text/javascript"></script>
 	<script src="js/gameBuilder/gameBuilder_letters.js" type="text/javascript"></script>
