Slight style tweaks, some default text, and overflow-y on the drawers (to match drawer repo)

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 		</header>
 		<div id="gameSummaryContents">
 			<h2>Current Game</h2>
-			<section id="currentGameSummaryContents"></section>
+			<section id="currentGameSummaryContents">No data available.</section>
 			<h2>Previous Game</h2>
 			<section id="previousGameSummaryContents">No data available.</section>
 		</div>
