Add roboto font, adjust font weights and sizes, add webapp manifest and favicons

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="theme-color" content="#0466a9">
 	<meta http-equiv="cache-control" content="no-cache, max-age=0" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>WordScramble Development</title>
-
+	<link rel="icon" type="image/png" href="image/ws.ico-192.png" sizes="192x192" />
+	<link rel="icon" type="image/png" href="image/ws.ico-144.png" sizes="144x144" />
+	<link rel="icon" type="image/png" href="image/ws.ico-96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="image/ws.ico-48.png" sizes="48x48" />
+	<link rel="icon" type="image/png" href="image/ws.ico-32.png" sizes="32x32" />
+	<link rel="apple-touch-icon" href="image/ws.ico-192.png" />
+	<link rel="manifest" href="manifest.json" />
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style/drawer.css" />
 	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
 	<link rel="stylesheet" href="font/fontello/css/fontello.css" />
