Move font file location, update index/prod html, add (incomplete) cache.manifest, rename webapp manifest, update Makefile

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<link rel="icon" type="image/png" href="image/ws.ico-48.png" sizes="48x48" />
 	<link rel="icon" type="image/png" href="image/ws.ico-32.png" sizes="32x32" />
 	<link rel="apple-touch-icon" href="image/ws.ico-192.png" />
-	<link rel="manifest" href="manifest.json" />
+	<link rel="manifest" href="webapp.manifest.json" />
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style/drawer.css" />
 	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
