--- a/src/prod.html
+++ b/src/prod.html
@@ -13,10 +13,9 @@
 	<link rel="icon" type="image/png" href="image/ws.ico-48.png" sizes="48x48" />
 	<link rel="icon" type="image/png" href="image/ws.ico-32.png" sizes="32x32" />
 	<link rel="apple-touch-icon" href="image/ws.ico-192.png" />
-	<link rel="manifest" href="manifest.json" />
+	<link rel="manifest" href="webapp.manifest.json" />
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="style/drawer.css" />
-	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
+	<link rel="stylesheet" type="text/css" href="wordScramble.css" />
 	<link rel="stylesheet" href="font/fontello/css/fontello.css" />
 </head>
 <body ontouchstart="">
@@ -78,7 +77,7 @@
 	<aside id="previousWordsWrapper"></aside>
 
 	<script src="config.js" type="text/javascript"></script>
-	<script src="wordScramble.js" type="text/javascript"></script>
+	<script src="wordScramble.min.js" type="text/javascript"></script>
 
 </body>
 </html>
