--- a/src/prod.html
+++ b/src/prod.html
@@ -76,7 +76,7 @@
 	<aside id="previousWordsWrapper"></aside>
 
 	<script src="config.js" type="text/javascript"></script>
-	<script src="wordScramble.min.js" type="text/javascript"></script>
+	<script src="wordScramble-min.js" type="text/javascript"></script>
 
 </body>
 </html>
