Style modifications, fix fontello path in dev

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
 	<link rel="apple-touch-icon" href="image/ws.ico-192.png" />
 	<link rel="manifest" href="webapp.manifest.json" />
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="style/drawer.css" />
-	<link rel="stylesheet" type="text/css" href="style/wordScramble.css" />
-	<link rel="stylesheet" href="font/fontello/css/fontello.css" />
+	<link rel="stylesheet" href="style/drawer.css" />
+	<link rel="stylesheet" href="style/wordScramble.css" />
+	<link rel="stylesheet" href="style/fontello.css" />
 </head>
 <body ontouchstart="">
 
