Add more font icons for the menu.

--- a/src/prod.html
+++ b/src/prod.html
@@ -28,8 +28,8 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="index.html" class="menuItem" title="start a new game" id="newGame">New Game</a></li>
-				<li><a href="index.html" class="menuItem gameSummaryToggle" title="view game summary" id="gameSummaryToggle">Game Summary</a></li>
+				<li><a href="index.html" class="icon-frown menuItem" title="start a new game" id="newGame">New Game</a></li>
+				<li><a href="index.html" class="icon-chart-pie menuItem gameSummaryToggle" title="view statistics" id="gameSummaryToggle">Statistics</a></li>
 			</ul>
 		</nav>
 	</aside>
