--- a/src/prod.html
+++ b/src/prod.html
@@ -21,7 +21,7 @@
 
 	<aside id="status"></aside>
 	
-	<aside id="menu" class="drawer" data-swipe-target="#gameContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle, .menuItem">
+	<aside id="menu" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="right" data-slide-out-dir="left" data-toggle-selector=".menuToggle, .menuItem">
 		<header>
 			<span class="icon-cancel menuToggle toggle" title="close menu"></span>
 			<h1>Menu</h1>
@@ -34,7 +34,7 @@
 		</nav>
 	</aside>
 	
-	<aside id="statistics" class="drawer" data-swipe-target="#gameContainer" data-slide-in-dir="left" data-slide-out-dir="right" data-toggle-selector=".statisticsToggle">
+	<aside id="statistics" class="drawer" data-swipe-target="#appContainer" data-slide-in-dir="left" data-slide-out-dir="right" data-toggle-selector=".statisticsToggle">
 		<header>
 			<span class="icon-cancel statisticsToggle toggle" title="close statistics"></span>
 			<h1>Statistics</h1>
@@ -47,7 +47,7 @@
 		</div>
 	</aside>
 
-	<article id="gameContainer" class="main">
+	<main id="appContainer" class="main">
 
 		<header id="gameHeader" class="container">
 			<hgroup>
@@ -71,7 +71,7 @@
 			<input type="button" id="submitWord" value="Submit Word" />
 		</section>
 
-	</article>
+	</main>
 
 	<aside id="previousWordsWrapper"></aside>
 
