Add some more error/warn/success feedback on word submit, improve UI of shuffle button

--- a/src/index.html
+++ b/src/index.html
@@ -60,18 +60,18 @@
 
 		<article id="gameContainer">
 		
-			<section id="maskedWords" class="container"></section>
+			<section id="maskedWords" class="container hide"></section>
 
-			<section id="turnActions" class="container">
+			<section id="turnActions" class="container hide">
 				<span id="wordAttempt"></span>
 				<a href="#" id="clearWordAttempt">clear</a>
 			</section>
 
 			<section id="letterContainer" class="container">
-				<div id="letterList" class="container"></div>
+				<div id="letterList" class="container">Preparing Game...</div>
 			</section>
 
-			<section id="turnSubmit" class="container">
+			<section id="turnSubmit" class="container hide">
 				<input type="button" id="submitWord" value="Submit Word" />
 			</section>
 
