Split css animation and large-screen rules into separate dev stylesheets

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,10 @@
 	<link rel="apple-touch-icon" href="image/ws.ico-192.png" />
 	<link rel="manifest" href="webapp.manifest.json" />
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="style/large-screen.css" />
 	<link rel="stylesheet" href="style/drawer.css" />
 	<link rel="stylesheet" href="style/wordScramble.css" />
+	<link rel="stylesheet" href="style/animation.css" />
 	<link rel="stylesheet" href="style/fontello.css" />
 </head>
 <body>
