--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,7 @@
 	<script src="js/wordAttemptService.js" type="text/javascript"></script>
 	<script src="js/gameService.js" type="text/javascript"></script>
 	<script src="js/uiService.js" type="text/javascript"></script>
+	<script src="js/keyService.js" type="text/javascript"></script>
 
 </body>
 </html>
