--- a/src/prod.html
+++ b/src/prod.html
@@ -74,7 +74,7 @@
 			</section>
 
 			<section id="turnSubmit" class="container">
-				<input type="button" id="submitWord" value="Submit Word" />
+				<input type="button" id="submitWord" value="..." />
 			</section>
 
 		</article>
