--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,7 @@
 	<script src="js/swipeHandler.js" type="text/javascript"></script>
 
 	<script src="js/uiModules/drawer.js" type="text/javascript"></script>
+  <script src="js/uiModules/cardPartRenderer.js" type="text/javascript"></script>
 	<script src="js/uiModules/newGameManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/submitWordManager.js" type="text/javascript"></script>
 	<script src="js/uiModules/clearWordAttemptManager.js" type="text/javascript"></script>
